# askcisco

./: .gitignore  LICENSE  README.md
pipeline/: Makefile  pyproject.toml
pipeline/data/queue/: docs.json  pdfs.json  urls.json
pipeline/src/pipeline/: __init__.py  ingest.py
pipeline/src/pipeline/scraping/: cisco_docs.py  cisco_live.py  duo.py  panoptica.py  scrape.py  umbrella.py
web/: package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  vite.config.ts
web/src/: app.html
web/src/lib/: db.server.ts  products.ts  types.ts  vectorstore.server.ts
web/src/lib/components/: EmptyState.svelte  Header.svelte  Message.svelte  Sources.svelte  SourcesPanel.svelte
web/src/routes/: +layout.svelte  +layout.ts  +page.server.ts  +page.svelte
web/src/routes/api/chat/: +server.ts
web/src/routes/api/rate/: +server.ts
web/src/routes/security/: +page.svelte
