[project]
name = "pipeline"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Jamie Watts", email = "jamie@wattsjs.com" }
]
dependencies = [
    "openai~=0.27.8",
    "tiktoken~=0.4.0",
    "pinecone-client[grpc]~=2.2.2",
    "langchain~=0.0.27",
    "sqlmodel~=0.0.8",
    "pypdf~=3.12.1",
    "spacy>=3.6.0",
    "qdrant_client>=1.3.1",
    "tqdm>=4.65.0",
    "playwright>=1.35.0",
    "unstructured>=0.8.1",
    "psycopg2-binary>=2.9.6",
    "scrapy>=2.9.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
ingest = "pipeline.ingest:main"
init_db = "pipeline.models:create_db_and_tables"
scrape = "pipeline.scraping.scrape:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "ruff>=0.0.278",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
# ignore line length and unused variables
ignore=["E501", "F841"]
